# lmkd-linux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN_SPEC_memory_guardian.md  LICENSE  README.md  ROADMAP.md  install.sh
.github/workflows/: ci.yml  release.yml
benchmark-results/A-mgd-off_20260624_113520/: samples.csv  summary.txt
benchmark-results/B-mgd-reactive_20260624_113639/: samples.csv  summary.txt
benchmark-results/C-mgd-full_20260624_113751/: samples.csv  summary.txt
config/: mgd.service  priorities.toml
docs/: ARCHITECTURE.md  DECISION_TREE.md  PRIVILEGE_DESIGN.md
mgctl/: Cargo.toml
mgctl/src/: calibrate.rs  doctor.rs  main.rs  watch.rs
mgd/: Cargo.toml
mgd-checkpoint/: Cargo.toml
mgd-checkpoint/src/: main.rs
mgd-common/: Cargo.toml
mgd-common/src/: error.rs  gpu.rs  lib.rs  logger.rs  meminfo.rs  output.rs  plugin.rs  process.rs  protocol.rs  psi.rs  socket.rs  types.rs  util.rs  zram.rs
mgd-cosmic/: Cargo.toml
mgd-cosmic/src/: main.rs
mgd-gnome/: Cargo.toml
mgd-gnome/src/: main.rs
mgd-gpu-amd/: Cargo.toml
mgd-gpu-amd/src/: main.rs
mgd-gpu-intel/: Cargo.toml
mgd-gpu-intel/src/: main.rs
mgd-kde/: Cargo.toml
mgd-kde/src/: main.rs
mgd-psi-trigger/: Cargo.toml
mgd-psi-trigger/src/: main.rs
mgd-zram/: Cargo.toml
mgd-zram/src/: reclaim.rs
mgd/src/: config.rs  events.rs  evictor.rs  ipc.rs  main.rs  maintenance.rs  plugin_server.rs  recovery.rs  spike_mode.rs  throttle.rs
mgd/src/engine/: calibrate.rs  decision.rs  health.rs  mod.rs
mgd/src/executor/: checkpoint.rs  freezer.rs  killer.rs  mod.rs  registry.rs
mgd/src/monitor/: cache.rs  gpu.rs  meminfo.rs  mod.rs  process.rs  psi.rs  zram.rs
packaging/: mgd-zram.conf
src/: config.rs  error.rs  evictor.rs  ipc.rs  lib.rs  logger.rs  main.rs  maintenance.rs  mgctl.rs  output.rs  recovery.rs  responder.rs  util.rs
src/engine/: decision.rs  health.rs  mod.rs
src/executor/: checkpoint.rs  freezer.rs  killer.rs  mod.rs  registry.rs
src/monitor/: cache.rs  firefox.rs  gpu.rs  meminfo.rs  mod.rs  process.rs  psi.rs  zram.rs
