[package]
name = "lmkd-linux"
version = "0.3.0"
edition = "2024"
description = "Proactive low-memory killer daemon for Linux desktop"
repository = "https://github.com/Aquilesorei/lmkd-linux"
license = "GPL-2.0"
authors = ["Caleb Zongo <your@email.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "mgd"
path = "src/main.rs"

[[bin]]
name = "mgctl"
path = "src/mgctl.rs"

[dependencies]
libc  = "0.2"
serde = { version = "1", features = ["derive"] }
toml  = "0.8"
regex = "1"

[profile.release]
opt-level = 3
strip = true      # strip debug symbols, smaller binary
lto = true        # link-time optimization, faster runtime
codegen-units = 1 # slower compile, faster binary