[workspace]
members = [
    "mgd-common",
    "mgd",
    "mgctl",
    "mgd-zram",
    "mgd-gpu-intel",
    "mgd-gpu-amd",
    "mgd-kde",
    "mgd-gnome",
    "mgd-cosmic",
]
resolver = "2"

# Shared dependency versions — each member opts in via `workspace = true`.
[workspace.dependencies]
libc       = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
regex      = "1"

[profile.release]
opt-level = 3
strip = true         # strip debug symbols, smaller binary
lto = true           # link-time optimisation, faster runtime
codegen-units = 1    # slower compile, faster binary