[package]
name        = "mgd-checkpoint"
version     = "0.4.0"
edition     = "2024"
description = "Capped CRIU checkpoint/restore helper wrapper binary"
repository  = "https://github.com/Aquilesorei/lmkd-linux"
license     = "GPL-2.0"
authors     = ["Caleb Zongo <your@email.com>"]

[[bin]]
name = "mgd-checkpoint"
path = "src/main.rs"

[dependencies]
libc       = { workspace = true }
mgd-common = { path = "../mgd-common" }
