[package]
name        = "mgd-gnome"
version     = "0.4.0"
edition     = "2024"
description = "GNOME Shell 45+ watcher plugin for mgd (scaffold)"
repository  = "https://github.com/Aquilesorei/lmkd-linux"
license     = "GPL-2.0"
authors     = ["Caleb Zongo <your@email.com>"]

[[bin]]
name = "mgd-gnome"
path = "src/main.rs"

[dependencies]
mgd-common = { path = "../mgd-common" }
libc       = { workspace = true }
