[package]
name        = "mgd-psi-trigger"
version     = "0.4.0"
edition     = "2024"
description = "Capped PSI kernel trigger helper — arms /proc/pressure/memory and proxies events"
repository  = "https://github.com/Aquilesorei/lmkd-linux"
license     = "GPL-2.0"
authors     = ["Caleb Zongo <achillezongo07@gmail.com>"]

[[bin]]
name = "mgd-psi-trigger"
path = "src/main.rs"

[dependencies]
libc = { workspace = true }
