[package]
name        = "mgd-zram"
version     = "0.3.0"
edition     = "2024"
description = "zram compact + proactive swap-reclaim plugin for mgd"
repository  = "https://github.com/Aquilesorei/lmkd-linux"
license     = "GPL-2.0"
authors     = ["Caleb Zongo <your@email.com>"]

# mgd-zram-reclaim: privileged CAP_SYS_ADMIN helper. Built unprivileged;
# gains cap via `setcap` at install time (opt-in). Self-contained — no deps
# beyond libc, no subprocess, no args/env.
[[bin]]
name = "mgd-zram-reclaim"
path = "src/reclaim.rs"

[dependencies]
mgd-common = { path = "../mgd-common" }
libc       = { workspace = true }
