[package]
name        = "mgd"
version     = "0.3.0"
edition     = "2024"
description = "Memory Guardian Daemon — proactive low-memory killer for Linux desktop"
repository  = "https://github.com/Aquilesorei/lmkd-linux"
license     = "GPL-2.0"
authors     = ["Caleb Zongo <your@email.com>"]

[[bin]]
name = "mgd"
path = "src/main.rs"

[dependencies]
mgd-common = { path = "../mgd-common" }
libc       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
regex      = { workspace = true }
